# CSCD

./: .gitignore  点云.tga  网格模型.tga  骨架线.tga
doc/: 骨架线引导的树状点云表面重建方法.docx
source-code/: .polyscope.ini  CMakeLists.txt  IO.py  gp3.cpp  imgui.ini  poisson.cpp  reconstruction.cpp  show_points.py
source-code/Reconstruction source code/: evaluate_mesh_result  evaluate_result.cpp  generate_anistropic_figure_data.cpp  generate_noise.cpp  generate_octree_figure_data.cpp  generate_sigma_illustration_data.cpp  generate_tree_models.py  generate_wlop_figure_data.cpp  geometry_generator_xyz.hpp  grid_xyz.hpp  obj_2_npts.cpp  octree_xyz.hpp  ply_2_npts.cpp  radius_info_generation.cpp  remove_points_for_missing_data_study.cpp  skel_2_obj.cpp  skeleton_based_tree_geometry_generation  skeleton_graph_to_skeletal_points.cpp  test_io.cpp  test_octree.cpp  wlop_xyz.hpp
source-code/Reconstruction source code/rules/: template1.rule
source-code/Reconstruction source code/scripts/: export_pc_in_blender.py  normalize_tree_mesh_and_skel_in_batch.py  ply_to_npts_in_batch.py
source-code/Reconstruction source code/scripts_on_server/: eval_upsampling_performance.py  generate_dataset_h5.py  generate_patches.py  generate_tree_models.py  npts_pc_generate_occlusion.py  obj_skel_to_npts_skel.py  remove_nans_in_npts.py
source-code/Reconstruction source code/show_models/: CMakeLists.txt  compile.sh  show_models.cpp
source-code/Reconstruction source code/show_models/polyscope/: polyscope源码分析.md
source-code/Reconstruction source code/show_models/polyscope/src/: polyscope.cpp
流程图/: gt-mesh.tga  (+2 more)
(+291 files in other folders)
